Fixed dropdown(z-index)

--- a/components/dropdown/dropdown.scss
+++ b/components/dropdown/dropdown.scss
@@ -6,13 +6,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 320px;
-        height: 44px;
         background-color: white;
         box-sizing: border-box;
-        
         cursor: pointer;
         padding-left: 15px;
+        height: 44px;
         .dropdown__form_placeholder {
             font-size: 0.875rem;
             line-height: 1.5rem;
@@ -32,13 +30,15 @@
         }
     }
     .dropdown__list {
+        position: absolute;
+        z-index: 100;
         background: #fff;
         margin: 0;
         width: 320px;
         list-style: none;
         padding: 0px 15px;
         box-sizing: border-box;
-        border-top: 1px solid rgba(31, 32, 65, 0.5);;
+        border: 1px solid rgba(31, 32, 65, 0.5);
         .dropdown__list__item {
             display: flex;
             justify-content: space-between;
@@ -106,6 +106,7 @@
 }
 
 .dropdown_bedroom {
+    width: 266px;
     .dropdown__form, .dropdown__list {
         width: 266px;
     }
